fix: fix icon align incorrect

--- a/src/App.css
+++ b/src/App.css
@@ -151,6 +151,7 @@ input:checked + .popup__slider::before {
 
 .popup__tip {
   display: flex;
+  align-items: baseline;
   margin-top: 5px;
   margin-bottom: 0;
   margin-left: -1px;
